--- a/styles/style.css
+++ b/styles/style.css
@@ -16,9 +16,11 @@
     "wdth" 100;
 }
 /* shared style */
+.secondary-bg{
+  background-color: #FFF8F3;
+}
 .text-primary{
   color: #FD6E0A;
-
 }
 .dark-2{
   color: #474747;
@@ -39,6 +41,15 @@
   border: 2px solid #FD6E0A;
   color: #FD6E0A;
   margin-top: 15px;
+}
+.section-tittle{
+  font-size: 35px;
+  font-weight: bold;
+  color: #181818;
+}
+.section-description{
+  font-size: 18px;
+  color: #757575;
 }
 /* header */
 .header{
@@ -90,6 +101,27 @@ nav li a{
 }
 .banner-profile-pic{
   width: 580px;
+}
+/* main styles */
+main{
+  max-width: 1140px;
+  margin: 0 auto;
+}
+/* about styles */
+.about{
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+  margin-top: 130px;
+}
+.about-items{
+  display: flex;
+  justify-content: space-around;
+}
+
+.item-description{
+  font-weight: 600;
+  line-height: 0;
 }
 
 
