--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,9 @@
   font-size: 18px;
   color: #757575;
 }
+.text-center{
+  text-align: center;
+}
 /* header */
 .header{
   background-image: url(../styles/images/developer.png),url(../styles/images/header_bg.png);
@@ -107,12 +110,16 @@ main{
   max-width: 1140px;
   margin: 0 auto;
 }
+main section{
+  margin-top: 130px;
+  margin-bottom:130px;
+}
 /* about styles */
 .about{
   border-radius: 10px;
   padding: 130px 150px;
   text-align: center;
-  margin-top: 130px;
+ 
 }
 .about-items{
   display: flex;
@@ -123,5 +130,57 @@ main{
   font-weight: 600;
   line-height: 0;
 }
+/* skills section */
+.skills-container{
+  display: flex;
+  gap: 24px
+}
+.skill-intro{
+  margin-bottom: 50px;
+}
 
+.skill{
+  padding: 30px;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+}
+/* resume container  */
 
+.resume-container{
+  display: flex;
+  gap: 24px;
+}
+.experience-sub-tittle{
+  font-size: 15px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.experience-description .experience-sub-tittle{
+  clip-path: #757575;
+}
+.resume hr{
+  margin: 30px 0;
+}
+.resume-btn{
+  margin-top: 50px;
+}
+
+/* footer styles */
+footer{
+  padding: 130px 230px;
+  display: flex;
+  gap: 100px;
+}
+.footer-colum{
+  width: 50%;
+}
+footer input[type="text"],footer input[type="email"],footer textarea{
+  height: 64px;
+  border-radius: 5PX;
+  background-color: aliceblue;
+  display: block;
+  width: 100%;
+  padding: 10PX 20PX;
+  margin-bottom: 24px;border: none;
+  font-size: 16px;
+}
